# localLibrary-effective-

./: .env  README.md  pyproject.toml
locallibrary/: db.sqlite3
locallibrary/catalog/: admin.py  models.py
locallibrary/catalog/migrations/: 0001_initial.py
locallibrary/locallibrary/: settings.py  urls.py
