[tool.poetry]
name = "locallib"
version = "0.1.0"
description = ""
authors = ["zizyamc96 <kirillzinich12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
